# GPT

./: README.md  pyproject.toml
gpt/: bigram.py  data.py  layers.py  model.py  run_experiments.py  run_experiments2.py  transformer.py  utils.py
gpt/models/: bigram.py  mlp.py  model.py  next_token.py  transformer.py  wavenet_v1.py  wavenet_v2.py
gpt/models/old/: old_bigram.py
notebooks/: 5-wavenet.ipynb  6-gpt_dev.ipynb  dev-Copy1.ipynb  dev-Copy2.ipynb  dev.ipynb  input.pt  train.ipynb  wavenet2.ipynb
