[tool.poetry]
name = "gpt"
version = "0.1.0"
description = ""
authors = ["Erik Gafni <egafni@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
torch = "^2.1.1"
scipy = "^1.11.3"
numpy = "^1.26.2"
matplotlib = "^3.8.1"


[tool.poetry.group.dev.dependencies]
jupyterlab = "^4.0.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
